--- a/index.html
+++ b/index.html
@@ -1,54 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Bitcoin Price : PHP site that shows the latest Bitcoin prices." />
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <title>Bitcoin Price</title>
+  <meta name="description" content="PHP site that shows the latest Bitcoin prices.">
 
-    <title>Bitcoin Price</title>
-  </head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <body>
+</head>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/xKripz/Bitcoin-Price">View on GitHub</a>
+<body>
 
-          <h1 id="project_title">Bitcoin Price</h1>
-          <h2 id="project_tagline">PHP site that shows the latest Bitcoin prices.</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/xKripz/Bitcoin-Price/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/xKripz/Bitcoin-Price/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Bitcoin Price</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">PHP site that shows the latest Bitcoin prices.</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/xKripz/Bitcoin-Price/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/xKripz/Bitcoin-Price/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/xKripz/Bitcoin-Price" class="code">View Bitcoin Price on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h1>
 <a name="bitcoin-price" class="anchor" href="#bitcoin-price"><span class="octicon octicon-link"></span></a>Bitcoin Price</h1>
 
 <hr><p>Simple PHP site that shows the latest Bitcoin prices. Just one file.</p>
 
 <p>It accesses the Bitstamp JSON and then copies it to the server, so that we don't hit the request limit imposed by Bitstamp.</p>
-      </section>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/xKripz" class="avatar"><img src="https://2.gravatar.com/avatar/81e690febaa872e58daa21c40df9323f?d=https%3A%2F%2Fidenticons.github.com%2Fc011de50255dd58300bd373efab1fa94.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/xKripz">xKripz</a> maintains <a href="https://github.com/xKripz/Bitcoin-Price">Bitcoin Price</a></p>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Bitcoin Price maintained by <a href="https://github.com/xKripz">xKripz</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
 
-    
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/xKripz/Bitcoin-Price/tarball/master" class="tar">tar</a><a href="https://github.com/xKripz/Bitcoin-Price/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
 
-  </body>
+  
+</body>
 </html>
