Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Bitcoin Price</title>
+  <title>PHP Bitcoin Price</title>
   <meta name="description" content="PHP site that shows the latest Bitcoin prices.">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Bitcoin Price</h1>
+      <h1 class="title">PHP Bitcoin Price</h1>
     </header>
     <div id="container">
       <p class="tagline">PHP site that shows the latest Bitcoin prices.</p>
@@ -31,7 +31,7 @@
         <div class="inner">
           <a href="https://github.com/xKripz/Bitcoin-Price/tarball/master" class="download-button tar"><span>Download</span></a>
           <a href="https://github.com/xKripz/Bitcoin-Price/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/xKripz/Bitcoin-Price" class="code">View Bitcoin Price on GitHub</a>
+          <a href="https://github.com/xKripz/Bitcoin-Price" class="code">View PHP Bitcoin Price on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -47,7 +47,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/xKripz" class="avatar"><img src="https://2.gravatar.com/avatar/81e690febaa872e58daa21c40df9323f?d=https%3A%2F%2Fidenticons.github.com%2Fc011de50255dd58300bd373efab1fa94.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/xKripz">xKripz</a> maintains <a href="https://github.com/xKripz/Bitcoin-Price">Bitcoin Price</a></p>
+      <p><a href="https://github.com/xKripz" class="avatar"><img src="https://2.gravatar.com/avatar/81e690febaa872e58daa21c40df9323f?d=https%3A%2F%2Fidenticons.github.com%2Fc011de50255dd58300bd373efab1fa94.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/xKripz">xKripz</a> maintains <a href="https://github.com/xKripz/Bitcoin-Price">PHP Bitcoin Price</a></p>
 
 
       </div>
